# gamache

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: python-ci-cd.yml
configs/: base.yml
docs/: api.md  index.md  usage.md
docs/assets/stylesheets/: extra.css
docs/notebooks/: 01_Fit_GAM_to_trajectory.ipynb  01_Trial.ipynb  02_Fit_GAM_with_random_effects.ipynb
notebooks/: 01_Fit_Basic_Spline.ipynb
scripts/: bootstrap.sh
src/gamache/: __init__.py  backend.py  config.py  irls.py
src/gamache/pl/: __init__.py  gene_fit.py  gene_heatmap.py
src/gamache/pp/: __init__.py
src/gamache/tl/: __init__.py  backend.py  fam.py  fit.py  irls.py  splines.py  utils.py
tests/: conftest.py  test_backend.py  test_config.py  test_example.py  test_fit.py  test_gene_fit.py  test_gene_heatmap.py  test_utils.py
