[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamache"
version = "0.1.0"
description = "gamache"
authors = [{ name = "lukasadam" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "anndata",
  "statsmodels",
  "scanpy",
  "numba",
  "numpyro",
  "jax",
  "tqdm",
  "statsmodels"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24",
  "isort>=5",
  "mypy>=1",
  "pre-commit>=3.7",
  "nbqa>=1.9",
  "nbmake>=1.5"
]
test = [
  "pytest>=8",
  "pytest-cov>=4",
  "dotenv>=1.0",
  "platformdirs>=4.2",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-section-index>=0.3",
  "pymdown-extensions>=10",
  "griffe>=0.48",
  "mkdocs-jupyter>=0.25",
  "nbformat>=5.10"
]
config = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "PyYAML>=6.0",
  "python-dotenv>=1.0",
  "platformdirs>=4.2",
]
dataio = [
  "fsspec>=2024.2.0",
  "s3fs>=2024.2.0",
  "gcsfs>=2024.2.0",
  "adlfs>=2024.2.0",
  "pandas>=2.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gamache*"]

[tool.pytest.ini_options]
addopts = "-q --ignore=src/gamache/config.py"

[tool.ruff]
line-length = 100
lint.ignore = ["E741"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
